--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<url>http://wiki.jenkins-ci.org/display/JENKINS/testng-plugin</url>
+	<url>http://frparrffgitlab.corp.capgemini.com/sig/utils/custom-testng-jenkins-plugin</url>
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
@@ -12,7 +12,7 @@
 	<artifactId>testng-plugin</artifactId>
 	<version>1.16-SNAPSHOT</version>
 	<packaging>hpi</packaging>
-	<name>TestNG Results Plugin</name>
+	<name>Custom TestNG Results Plugin</name>
 
 	<licenses>
 		<license>
